# nlp100

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: python-ci.yml
ch1/00/: README.md
src/ch1/: README.md
src/ch1/_00/: README.md
src/ch1/_01/: README.md  patatokukashi.py  patatokukashi_use_slice.py
src/ch1/_02/: README.md  patoka_takushi.py
src/ch1/_03/: README.md  pi.py
src/ch1/_04/: README.md  atoms.py
src/ch1/_05/: README.md  n_gram.py
src/ch1/_06/: README.md  bi_gram.py
src/ch1/_07/: README.md  function.py
src/ch1/_08/: README.md  cipher.py
src/ch1/_09/: README.md  typoglycemia.py
src/ch2/: README.md
src/ch2/_10/: README.md  wc_l.py
src/ch2/_11/: README.md  tr.py
src/ch2/_12/: README.md  cut.py
src/ch2/_13/: README.md  paste.py
src/ch2/_14/: README.md  head.py
src/ch2/_15/: README.md  tail.py
src/ch2/_16/: README.md  split.py
src/ch2/_17/: README.md  uniq.py
src/ch2/_18/: README.md  sort.py
src/ch2/_19/: README.md  sort_hist.py
src/ch3/: README.md
src/ch3/_20/: README.md  find_one.py  ndjson.py
src/ch3/_21/: README.md  categories.py
src/ch3/_22/: README.md  get_categories.py
src/ch3/_23/: README.md  get_sections.py
src/ch3/_24/: README.md  get_media.py
src/ch3/_25/: README.md  get_base_infomation.py
tests/: conftest.py
tests/ch1/_00/: test_reverse_word.py
tests/ch1/_01/: test_patatokukashi.py
tests/ch1/_02/: test_patoka_takushi.py
tests/ch1/_03/: test_pi.py
tests/ch1/_04/: test_atoms.py
tests/ch1/_05/: test_n_gram.py
(+23 files in other folders)
