[tool.poetry]
name = "nlp100"
version = "0.0.0"
description = "100 work related to language processing."

license = "MIT"

authors = [
  "Yuki Yamazaki <yuki@kamiazya.tech>"
]

readme = 'README.md'

repository = "https://github.com/kamiazya/nlp100"
homepage = "https://github.com/kamiazya/nlp100"

keywords = []

packages = [
  { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
regex = "^2020.1.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5"
flake8 = "^3.7.9"
mypy = "^0.790"
black = "^19.10b0"
isort = "^4.3.21"
pytest = "^5.3.5"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
